# FIT_ICP_pacman

./: .clang-format  .clang-tidy  .gitignore  Doxyfile  Makefile  README.md
.github/workflows/: cmake.yml
examples/: map2.txt  map3.txt  map_ours.txt
pacman/: CMakeLists.txt  main.cpp  pacman.h  pacmanwindow.cpp  pacmanwindow.h  pacmanwindow.ui  resources.qrc
pacman/Controller/: controller.cpp  controller.h
pacman/GUI/: main_window.cpp  main_window.h
pacman/GUI/GraphicItems/: item_ghost.cpp  item_ghost.h  item_key.cpp  item_key.h  item_pacman.cpp  item_pacman.h  item_target.cpp  item_target.h  item_wall.cpp  item_wall.h  pacman_graphics_item.cpp  pacman_graphics_item.h
pacman/GUI/ScreenEndGame/: screenendgame.h
pacman/GUI/ScreenGame/: game_view.cpp  game_view.h  livesdisplayimage.cpp  livesdisplayimage.h  screen_game.cpp  screen_game.h
pacman/GUI/ScreenLoadGame/: screen_load_game.cpp  screen_load_game.h
pacman/GUI/ScreenMenu/: screen_menu.cpp
pacman/GUI/ScreenNewGame/: screen_new_game.cpp  screen_new_game.h  widget_text_input_dialog.h
pacman/GameState/: GameState.cpp  GameState.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h  Player.h  Pos.cpp  Pos.h  astar.cpp  astar.h  parse.cpp  parse.h
pacman/tests/: CMakeLists.txt
pacman/tests/Boost/: CMakeLists.txt
pacman/tests/FixedPoint/: CMakeLists.txt  from_int.cpp  multiplication.cpp  subtraction.cpp  test_helper_macros.h
src/: CMakeLists.txt  pacman.h
src/Controller/: controller.cpp  controller.h
src/GUI/: main_window.h
src/GUI/GraphicItems/: item_key.cpp  item_target.cpp  item_wall.cpp  pacman_graphics_item.h
src/GUI/ScreenEndGame/: screenendgame.cpp  screenendgame.h
src/GUI/ScreenGame/: game_view.cpp  game_view.h  livesdisplay.cpp  livesdisplay.h  livesdisplayimage.cpp  livesdisplayimage.h  screen_game.cpp  screen_game.h
src/GUI/ScreenLoadGame/: screen_load_game.h  widget_file_input_dialog.cpp  widget_file_input_dialog.h
src/GUI/ScreenMenu/: screen_menu.h  widget_main_menu.cpp  widget_main_menu.h
src/GUI/ScreenNewGame/: screen_new_game.h  widget_map_file_dialog.cpp  widget_map_file_dialog.h  widget_text_input_dialog.cpp  widget_text_input_dialog.h
src/GameState/: GameState.cpp  GameState.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h  Player.cpp  Player.h  Pos.h  astar.cpp  astar.h  parse.cpp  parse.h
src/tests/: CMakeLists.txt
src/tests/Boost/: builds.cpp
src/tests/FixedPoint/: addition.cpp  comparison.cpp  test_helper_macros.h
